--- a/portfolio.html
+++ b/portfolio.html
@@ -185,7 +185,7 @@
 
         /* Projects Section */
         .projects-list {
-            list-style: none;
+            list-style:inside;
             padding-left: 0;
             margin-top: 0;
         }
@@ -240,8 +240,8 @@
             <h1>Sakshi Shah</h1>
             <div class="header-info">
                 <p>Masters in Mechanical Engineering | North Carolina State University</p>
-                <p><a href="mailto:sakshi.shah@example.com" class="btn">Email</a> | <a
-                        href="https://www.linkedin.com/in/sakshishah" target="_blank" class="btn">LinkedIn</a></p>
+                <p><a href="mailto:sshah37@ncsu.edu" class="btn">Email</a> | <a
+                        href="https://www.linkedin.com/in/sakshi-5hah/" target="_blank" class="btn">LinkedIn</a></p>
             </div>
         </header>
 
