--- a/portfolio.html
+++ b/portfolio.html
@@ -321,6 +321,15 @@
                                 Package Delivery</a></li>
                         <li><a href="ElectroPermanentMagneticClamp.html" class="project-link"  target="_blank">Two Pole Electro-Permanent Magnet Clamp for
                                 Workpiece holding during machining</a></li>
+                        <li><a href="ElectroPermanentMagneticClamp.html" class="project-link"  target="_blank">Design of State Feedback Controller for Car 
+                                Cruise Control</a></li>
+                        <li><a href="ElectroPermanentMagneticClamp.html" class="project-link"  target="_blank">Modeling Tuned Vibration Absorber to Optimize 
+                                Rider comfort</a></li>
+                        <li><a href="ElectroPermanentMagneticClamp.html" class="project-link"  target="_blank">Modeling and Simulation of spacecraft attitude 
+                                dynamics</a></li>
+                        <li><a href="ElectroPermanentMagneticClamp.html" class="project-link"  target="_blank">Design Upper Limb Locomotion Model for Injury 
+                                Prevention in Baseball Athletes</a></li>
+                                
                     </ul>
                 </div>
             </section>
