--- a/ControllerSimulation.html
+++ b/ControllerSimulation.html
@@ -51,6 +51,7 @@
 </head>
 <body>
     <div class="container">
+	<p><a href="portfolio.html">Back to Home</a></p>
         <h1>Tracking Control of a Robot Manipulator with Uncertainties</h1>
         <p>This project focuses on understanding the differences between various nonlinear control design techniques.
             The primary objective is to design, simulate, and compare the performance of three distinct nonlinear
@@ -61,8 +62,12 @@
             It involves deriving the governing equations and representing them using the notations introduced in the
             BME 590 course with a detailed analysis of each control technique, evaluating its stability and tracking
             accuracy  </p>
-        <p class="tech-used">Technologies Used: MATLAB, OpenCV, GStreamer, ROS, Kinova Gen 3 Robot, Data-Driven Controllers</p>
-        <p><a href="portfolio.html">Back to Home</a></p>
+        <p class="tech-used">Technologies Used: MATLAB, Simulink</p>
+	<p class="tech-used">Concepts Learnt: Stability Analysis, Non-LinearController Design</p>
+	<img src="C:\Users\admin\OneDrive - North Carolina State University\Jobs\SakshiShah\BME_Proj\Adaptive_Control.png" width="300" height="200">
+	<img src="C:\Users\admin\OneDrive - North Carolina State University\Jobs\SakshiShah\BME_Proj\EMK.png" width="300" height="200">
+	<img src="C:\Users\admin\OneDrive - North Carolina State University\Jobs\SakshiShah\BME_Proj\Robust_Control.png" width="300" height="200">
+        
     </div>
 </body>
 </html>
