--- a/SmartSortingLine.html
+++ b/SmartSortingLine.html
@@ -50,7 +50,9 @@
     </style>
 </head>
 <body>
+
     <div class="container">
+	<p><a href="portfolio.html">Back to Home</a></p>
         <h1>Remote Control and Monitoring of Conveyor System for Package Delivery</h1>
         <p>This project focussed on developing a system taht Sorts packages by color using Micro800 PLC, with the following features:
             • Real-time data via Modbus TCP/IP and MQTT.
@@ -58,8 +60,14 @@
             • HMI for local control (status, start/stop, alerts).
             • ML model estimates processing time
     </p>
-        <p class="tech-used">Technologies Used: MATLAB, OpenCV, GStreamer, ROS, Kinova Gen 3 Robot, Data-Driven Controllers</p>
-        <p><a href="portfolio.html">Back to Home</a></p>
+        <p class="tech-used">Technologies Used: HTML, Connected Components Workbench, Python, VS Code, Factory I/O, Datagrip, PostgreSQL database, 	Render, Allen-Bradley Micro 800, GitHub </p>
+	<p class="tech-used">Concepts Learnt: Communication Protocols, PLC Programming, Sensor and Actuator Integration, Digital Twin, Machine Learning, based data management, IOT, AI/ML in 	predictive maintainance, Cyber Physical Syatems </p>
+	<img src="C:\Users\admin\OneDrive - North Carolina State University\Jobs\SakshiShah\SortingLine\Proj_Img.png" alt="PLC Connections 	"width="300" height="200">
+	<img src="C:\Users\admin\OneDrive - North Carolina State University\Jobs\SakshiShah\SortingLine\Front_end.png" alt="PLC Connections 	"width="300" height="200">
+	<img src="C:\Users\admin\OneDrive - North Carolina State University\Jobs\SakshiShah\SortingLine\System_Architecture.png" alt="PLC 	Connections "width="600" height="200">
+	
+        
+	
     </div>
 </body>
 </html>
