--- a/SmartSortingLine.html
+++ b/SmartSortingLine.html
@@ -62,9 +62,9 @@
     </p>
         <p class="tech-used">Technologies Used: HTML, Connected Components Workbench, Python, VS Code, Factory I/O, Datagrip, PostgreSQL database, 	Render, Allen-Bradley Micro 800, GitHub </p>
 	<p class="tech-used">Concepts Learnt: Communication Protocols, PLC Programming, Sensor and Actuator Integration, Digital Twin, Machine Learning, based data management, IOT, AI/ML in 	predictive maintainance, Cyber Physical Syatems </p>
-	<img src="C:\Users\admin\OneDrive - North Carolina State University\Jobs\SakshiShah\SortingLine\Proj_Img.png" alt="PLC Connections 	"width="300" height="200">
-	<img src="C:\Users\admin\OneDrive - North Carolina State University\Jobs\SakshiShah\SortingLine\Front_end.png" alt="PLC Connections 	"width="300" height="200">
-	<img src="C:\Users\admin\OneDrive - North Carolina State University\Jobs\SakshiShah\SortingLine\System_Architecture.png" alt="PLC 	Connections "width="600" height="200">
+	<img src="SortingLine\Proj_Img.png" alt="PLC Connections 	"width="300" height="200">
+	<img src="SortingLine\Front_end.png" alt="PLC Connections 	"width="300" height="200">
+	<img src="SortingLine\System_Architecture.png" alt="PLC 	Connections "width="600" height="200">
 	
         
 	
