--- a/ControllerSimulation.html
+++ b/ControllerSimulation.html
@@ -64,9 +64,9 @@
             accuracy  </p>
         <p class="tech-used">Technologies Used: MATLAB, Simulink</p>
 	<p class="tech-used">Concepts Learnt: Stability Analysis, Non-LinearController Design</p>
-	<img src="C:\Users\admin\OneDrive - North Carolina State University\Jobs\SakshiShah\BME_Proj\Adaptive_Control.png" width="300" height="200">
-	<img src="C:\Users\admin\OneDrive - North Carolina State University\Jobs\SakshiShah\BME_Proj\EMK.png" width="300" height="200">
-	<img src="C:\Users\admin\OneDrive - North Carolina State University\Jobs\SakshiShah\BME_Proj\Robust_Control.png" width="300" height="200">
+	<img src="BME_Proj\Adaptive_Control.png" width="300" height="200">
+	<img src="BME_Proj\EMK.png" width="300" height="200">
+	<img src="BME_Proj\Robust_Control.png" width="300" height="200">
         
     </div>
 </body>
