--- a/portfolio.html
+++ b/portfolio.html
@@ -288,6 +288,18 @@
             <section class="section">
                 <h2>Professional Experience</h2>
                 <div class="card">
+			<!-- Research Assistant -->
+                    <div class="dropdown">
+                        <button>Research Assistant</button>
+                        <p class="date-location">Jan 2025 - August 2025 | Raleigh, NC</p>
+                        <div class="dropdown-content">
+                            <ul>
+                                <li>Research Assistant at the Neuromuscular Control and Robotics Lab, working on enhancing exoskeleton mobility.</li>
+                                <li>Designing and fabricating components to enable lateral movement in the exoskeleton.</li>
+                                <li>Integrating the necessary hardware for seamless functionality and performance improvement.</li>
+                            </ul>
+                        </div>
+                    </div>
                     <!-- Process Development Intern -->
                     <div class="dropdown">
                         <button>Process Development Intern</button>
