--- a/VisualServoControl.html
+++ b/VisualServoControl.html
@@ -53,8 +53,7 @@
     <div class="container">
 	<p><a href="portfolio.html">Back to Home</a></p>
         <h1>Visual Servo Control of a 7-Link Kinova Gen3 Robot Arm</h1>
-        <p>This project investigates acoustic mechanisms using encapsulated air bubbles for microrobot propulsion in fluids, remote drug release, and energy harvesting.  It also focuses on data-driven controllers for precise microrobot navigation.</p>
-        <p>My role involves developing a closed-loop control system to track a micro swimmer using an ultrasound probe and a 7-link Kinova Gen3 robot arm, as it navigates a viscous medium under vibration forces.</p>
+        My role involves developing a closed-loop control system to track a micro swimmer using an ultrasound probe and a 7-link Kinova Gen3 robot arm, as it navigates a viscous medium under vibration forces.</p>
         <p class="tech-used">Technologies Used: MATLAB, OpenCV, GStreamer, ROS, Kinova Gen 3 Robot, Data-Driven Controllers</p>
         
 	<p class="tech-used">Concepts Learnt: Camera Caliberation, Joint space and Task space control,Trajectory Planning, Inverse Kinematics, 	Object 	Detection </p>
