--- a/portfolio.html
+++ b/portfolio.html
@@ -351,49 +351,50 @@
             <li class="dropdown">
                 <a href="VisualServoControl.html" class="project-link" target="_blank">Visual Servo Control of a 7-link Kinova Gen3 Robot Arm</a>
                 <div class="dropdown-content">
-                    Implemented real-time object tracking and control using a camera feedback system.
+                    <p>MATLAB, OpenCV, GStreamer, ROS, Kinova Gen3 Robot</p>
+                    <p>Camera Caliberation, Joint space and Task space control,Trajectory Planning, Inverse Kinematics, Object Detection</p>
                 </div>
             </li>
             <li class="dropdown">
                 <a href="ControllerSimulation.html" class="project-link" target="_blank">Simulation and Design of Nonlinear Controllers for a Two-	Link Robot Arm</a>
                 <div class="dropdown-content">
-                    Developed nonlinear control algorithms and tested their performance through MATLAB simulations.
+                    <p>Matlab, Simulink</p>
+                    <p>Non-Linear Controler Design, Stability Analysis</p>
                 </div>
             </li>
             <li class="dropdown">
                 <a href="SmartSortingLine.html" class="project-link" target="_blank">Remote Control and Monitoring of Conveyor System for Package 	Delivery</a>
                 <div class="dropdown-content">
-                    Designed a smart sorting system for automated package handling using PLC and IoT.
+                    <p>Python, HTML, GitHub Render, PostGreSQL, Connected Components Workbench, Factory I/O, VS Code, Datagrip, Allen-Bradley Micro 800.</p>
+                    <p>Communication Protocols, PLC Programming, Sensor and Actuator Integration, Digital Twin, Machine Learning, based data management, IOT, AI/ML in predictive maintainance, Cyber Physical Syatems</p>
                 </div>
             </li>
             <li class="dropdown">
                 <a href="ElectroPermanentMagneticClamp.html" class="project-link" target="_blank">Two-Pole Electro-Permanent Magnet Clamp for 	Workpiece Holding During Machining</a>
                 <div class="dropdown-content">
-                    Engineered a magnet clamp system to enhance workpiece stability and reduce machining errors.
+                    <p>MATLAB, OctaveFEMM, ANSYS EDT</p>
+                    <p>Magnetic Circuit Analysis, Eddy Current Breaking, Magnetostatics</p>
                 </div>
             </li>
             <li class="dropdown">
                 <a href="StateFeedbackController.html" class="project-link" target="_blank">Design of State Feedback Controller for Car Cruise 		Control</a>
                 <div class="dropdown-content">
-                    Developed and simulated a state feedback controller to optimize vehicle speed regulation.
+                    <p>MATLAB, Simulink</p>
+                    <p>PID Controller Design, State Space Representation, Open and Closed Loop Transfer Function, Nyquist Diagram, Root Locus Staility Analysis, Controllability and Observability</p>
                 </div>
             </li>
             <li class="dropdown">
                 <a href="VibrationAbsorber.html" class="project-link" target="_blank">Modeling Tuned Vibration Absorber to Optimize Rider 	Comfort</a>
                 <div class="dropdown-content">
-                    Designed a vibration absorber to reduce unwanted oscillations in vehicle suspension systems.
+                    <p>MATLAB</p>
+                    <p>Quater Car Model, Bode Plot ,Active and Passive Vibration Damping</p>
                 </div>
             </li>
             <li class="dropdown">
                 <a href="SpacecraftDynamics.html" class="project-link" target="_blank">Modeling and Simulation of Spacecraft Attitude Dynamics</a>
                 <div class="dropdown-content">
-                    Simulated spacecraft orientation dynamics using control algorithms in MATLAB.
-                </div>
-            </li>
-            <li class="dropdown">
-                <a href="UpperLimbLocomotion.html" class="project-link" target="_blank">Design of Upper Limb Locomotion Model for Injury Prevention 	in Baseball Athletes</a>
-                <div class="dropdown-content">
-                    Modeled upper limb biomechanics to analyze and minimize the risk of repetitive stress injuries.
+                    <p>MATLAB</p>
+                    <p>Euler Equations, Frame Transformations, ODE45</p>
                 </div>
             </li>
         </ul>
