--- a/portfolio.html
+++ b/portfolio.html
@@ -254,6 +254,40 @@
             display: block;
         }
 
+       /* Center the button */
+.resume-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Full viewport height */
+}
+
+/* Button styling */
+.resume-button {
+    display: inline-block;
+    background-color: #f0f0f0; /* Light grey background */
+    padding: 12px 20px;
+    border-radius: 8px;
+    text-decoration: none;
+    border: 2px solid #ccc; /* Light border */
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease, transform 0.2s;
+}
+
+.resume-button:hover {
+    background-color: #e0e0e0; /* Slightly darker grey on hover */
+    transform: scale(1.05);
+}
+
+/* Resume text inside a box */
+.resume-text {
+    display: inline-block;
+    background-color: #333; /* Dark box */
+    color: white; /* White text */
+    font-weight: bold;
+    padding: 8px 16px;
+    border-radius: 4px;
+}
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -265,8 +299,10 @@
             <h1>Sakshi Shah</h1>
             <div class="header-info">
                 <p>Masters in Mechanical Engineering | North Carolina State University</p>
-                <p><a href="mailto:sshah37@ncsu.edu" class="btn">Email</a> | <a
-                        href="https://www.linkedin.com/in/sakshi-5hah/" target="_blank" class="btn">LinkedIn</a></p>
+                <p><a href="mailto:sshah37@ncsu.edu" class="btn">Email</a> | 
+                    <a href="https://www.linkedin.com/in/sakshi-5hah/" target="_blank" class="btn">LinkedIn| 
+                    <a href="SakshiShah_Resume.pdf.pdf" target="_blank" class="resume-card">Resume</a>
+                </p>
             </div>
         </header>
 
@@ -405,10 +441,12 @@
         </div>
 
         <footer class="footer">
-            <p>&copy; 2025 Sakshi Shah. All rights reserved.</p>
+            
+            
         </footer>
     </div>
 
 </body>
+
 
 </html>
