--- a/portfolio.html
+++ b/portfolio.html
@@ -301,7 +301,7 @@
                 <p>Masters in Mechanical Engineering | North Carolina State University</p>
                 <p><a href="mailto:sshah37@ncsu.edu" class="btn">Email</a> | 
                     <a href="https://www.linkedin.com/in/sakshi-5hah/" target="_blank" class="btn">LinkedIn| 
-                    <a href="SakshiShah_Resume.pdf.pdf" target="_blank" class="resume-card">Resume</a>
+                    <a href="SakshiShah_Resume.pdf" target="_blank" class="resume-card">Resume</a>
                 </p>
             </div>
         </header>
