--- a/portfolio.html
+++ b/portfolio.html
@@ -75,6 +75,7 @@
 
         .section {
             margin-bottom: 30px;
+            text-align: center;
         }
 
         .footer {
@@ -104,6 +105,7 @@
             border-radius: 10px;
             margin-bottom: 20px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
 
         .card h3 {
@@ -260,6 +262,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh; /* Full viewport height */
+    margin-top: 20px;
 }
 
 /* Button styling */
@@ -272,6 +275,7 @@
     border: 2px solid #ccc; /* Light border */
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s ease, transform 0.2s;
+    text-align: center;
 }
 
 .resume-button:hover {
