--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
             border: none;
             border-radius: 5px;
             font-weight: bold;
-            font-size: 1.1em;
+            font-size: .8em;
             margin: 5px 10px;
             text-decoration: none;
             transition: background-color 0.3s ease;
@@ -102,8 +102,8 @@
         .card {
             background-color: #2c3e50;
             padding: 25px;
-            border-radius: 10px;
-            margin-bottom: 20px;
+            border-radius: 5px;
+            margin-bottom: 10px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             text-align: center;
         }
