--- a/portfolio.html
+++ b/portfolio.html
@@ -374,9 +374,9 @@
                         <p class="date-location">January 2021 - May 2021 | Raleigh, NC</p>
                         <div class="dropdown-content">
                             <ul>
-                                <li>Modeled a sustainable mode of intercity travel using SOLIDWORKS and Fusion 360.</li>
-                                <li>Used MATLAB for modeling optimal bicycle handling quality and drivetrain components.</li>
-                                <li>Designed a bicycle with specific control sensitivity and speed parameters.</li>
+                                <li>Employed SOLIDWORKS for frame modeling; ANSYS Mechanical, and Fusion 360 for structural analysis of the bamboo frame.</li>
+                                <li>Utilized MATLAB for modeling parameters for optimal bicycle handling quality, stability mechanics, and selection of mechanical/electrical drivetrain components</li>
+                                <li>Designed a bicycle with a fork flop of 150.4278 N/rad and a maximum control sensitivity of 16.2579 rad/ms that could travel at a minimum speed of 2m/s and a maximum speed of 12m/s when pedaling at 50rpm.</li>
                             </ul>
                         </div>
                     </div>
